Implemented endpoint to get hourly production by supply